--- a/app/src/main/res/layout/activity_best_channel.xml
+++ b/app/src/main/res/layout/activity_best_channel.xml
@@ -28,7 +28,7 @@
                 android:background="#FFFFFF">
 
                 <TextView
-                    android:id="@+id/textView9"
+                    android:id="@+id/subscribe_text_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -48,6 +48,7 @@
         </android.support.v7.widget.Toolbar>
 
         <android.support.v7.widget.RecyclerView
+            android:id="@+id/subscribe_recycler"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
     </LinearLayout>
