--- a/app/src/main/res/layout/mypage_activity.xml
+++ b/app/src/main/res/layout/mypage_activity.xml
@@ -6,86 +6,95 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="250dp"
+        android:layout_height="299.52dp"
         android:background="#ffffff">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/mypage_toolbar"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_marginTop="15dp"
+            android:layout_height="24dp"
+            android:layout_marginTop="29.76dp"
 
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true" >
 
             <ImageButton
                 android:id="@+id/back_btn"
-                android:layout_width="28dp"
-                android:layout_height="28dp"
-                android:src="@drawable/back_btn"
+                android:layout_width="18dp"
+                android:layout_height="18dp"
+
                 android:background="#ffffff"
                 android:layout_gravity="left"
-                android:layout_marginLeft="15dp"
+                android:layout_marginLeft="16.56dp"
 
                 />
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="74dp"
+                android:layout_height="24dp"
                 android:text="MY PAGE"
-                android:textSize="17sp"
+                android:textSize="18dp"
                 android:textStyle="bold"
-                android:textColor="#000000"
+                android:textColor="#333333"
                 android:layout_gravity="center_horizontal"
                 />
             <ImageButton
                 android:id="@+id/mypage_out_btn"
-                android:layout_width="32dp"
-                android:layout_height="32dp"
-                android:src="@drawable/mypage_out_btn"
+                android:layout_width="18.18dp"
+                android:layout_height="21.12dp"
                 android:background="#ffffff"
                 android:layout_gravity="right"
-                android:layout_marginRight="15dp"
+                android:layout_marginRight="14.4dp"
                 android:layout_centerVertical="true"/>
 
         </android.support.v7.widget.Toolbar>
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="250dp"
-            android:layout_below="@+id/mypage_toolbar">
+
 
             <ImageView
-                android:layout_width="95dp"
-                android:layout_height="95dp"
-                android:src="@drawable/mypage_btn_small"
+                android:layout_width="101.76dp"
+                android:layout_height="101.76dp"
                 android:layout_centerInParent="true"
                 />
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="102dp"
+                android:layout_height="22dp"
                 android:text="Lee Hokyung"
                 android:layout_alignParentBottom="true"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="0dp"
-                android:textSize="16sp"
-                android:textColor="#000000"
-                android:layout_marginBottom="15dp"
+                android:textSize="16dp"
+                android:textColor="#333333"
+                android:layout_marginBottom="58.64dp"
                 />
+
 
 
         </RelativeLayout>
 
-
-    </RelativeLayout>
-    <TextView
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="26.9dp">
+    <ImageView
         android:layout_width="match_parent"
-        android:layout_height="25dp"
-        android:text="My Requests"
-        android:gravity="center"
-        android:textSize="13sp"
+        android:layout_height="1.92dp"
+        android:background="#E1E1E1"
         />
 
+    <TextView
+        android:layout_width="78dp"
+        android:layout_height="18dp"
+        android:text="My Requests"
+        android:gravity="center"
+        android:textSize="13dp"
+        android:textColor="#A5A5A5"
+        android:layout_centerInParent="true"
+        />
+
+</RelativeLayout>
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="340.9dp">
     <android.support.v7.widget.RecyclerView
 
         android:layout_width="match_parent"
@@ -94,4 +103,6 @@
         >
 
     </android.support.v7.widget.RecyclerView>
+
+</RelativeLayout>
 </LinearLayout>
