--- a/app/src/main/res/layout/activity_mypage.xml
+++ b/app/src/main/res/layout/activity_mypage.xml
@@ -1,76 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="299.52dp"
+        android:layout_height="265dp"
         android:background="#ffffff">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/mypage_toolbar"
             android:layout_width="match_parent"
-            android:layout_height="24dp"
-            android:layout_marginTop="29.76dp"
-
+            android:layout_height="82dp"
             android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true" >
+            android:layout_centerHorizontal="true"
+            app:contentInsetEnd="0dp"
+            app:contentInsetStart="0dp">
 
             <ImageButton
                 android:id="@+id/back_btn"
-                android:layout_width="18dp"
-                android:layout_height="18dp"
-
-                android:background="#ffffff"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
                 android:layout_gravity="left"
-                android:layout_marginLeft="16.56dp"
-
-                />
+                android:background="#FFFFFF"
+                android:padding="16dp"
+                app:srcCompat="@drawable/back_btn" />
 
             <TextView
-                android:layout_width="74dp"
+                android:layout_width="wrap_content"
                 android:layout_height="24dp"
-                android:text="MY PAGE"
-                android:textSize="18dp"
-                android:textStyle="bold"
-                android:textColor="#333333"
                 android:layout_gravity="center_horizontal"
-                />
+                android:text="MY PAGE"
+                android:textColor="#333333"
+                android:textSize="18dp"
+                android:textStyle="bold" />
+
             <ImageButton
                 android:id="@+id/mypage_out_btn"
-                android:layout_width="18.18dp"
-                android:layout_height="21.12dp"
-                android:background="#ffffff"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_centerVertical="true"
                 android:layout_gravity="right"
-                android:layout_marginRight="14.4dp"
-                android:layout_centerVertical="true"/>
+                android:background="#ffffff"
+                android:padding="16dp"
+                app:srcCompat="@drawable/mypage_out_btn" />
 
         </android.support.v7.widget.Toolbar>
 
 
+        <ImageView
+            android:layout_width="101.76dp"
+            android:layout_height="101.76dp"
+            android:layout_centerInParent="true"
+            android:layout_marginTop="13dp"
+            android:background="@drawable/bottom_bar_home_active_icon" />
 
-            <ImageView
-                android:layout_width="101.76dp"
-                android:layout_height="101.76dp"
-                android:layout_centerInParent="true"
-                />
-            <TextView
-                android:layout_width="102dp"
-                android:layout_height="22dp"
-                android:text="Lee Hokyung"
-                android:layout_alignParentBottom="true"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="0dp"
-                android:textSize="16dp"
-                android:textColor="#333333"
-                android:layout_marginBottom="58.64dp"
-                />
+        <TextView
+            android:layout_width="102dp"
+            android:layout_height="22dp"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="27dp"
+            android:layout_marginTop="0dp"
+            android:text="Lee Hokyung"
+            android:textColor="#333333"
+            android:textSize="16dp" />
 
 
-
-        </RelativeLayout>
+    </RelativeLayout>
 
 <RelativeLayout
     android:layout_width="match_parent"
