--- a/app/src/main/res/layout/row_video_contents_video.xml
+++ b/app/src/main/res/layout/row_video_contents_video.xml
@@ -7,8 +7,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16.01dp"
-        android:layout_marginLeft="20dp">
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="16.01dp">
 
         <FrameLayout
             android:layout_width="144.5dp"
@@ -23,29 +24,29 @@
                 android:id="@+id/video_icon"
                 android:layout_width="29.55dp"
                 android:layout_height="29.55dp"
-                android:src="@drawable/play_inside_content_icon"
-                android:layout_gravity="bottom" />
+                android:layout_gravity="bottom"
+                android:src="@drawable/play_inside_content_icon" />
 
             <TextView
                 android:id="@+id/video_time"
-                android:layout_width="29.55dp"
-                android:layout_height="15.76dp"
-                android:paddingRight="9.57dp"
-                android:paddingBottom="7.39dp"
-                android:gravity="center"
-                android:background="#000000"
-                android:textColor="#FFFFFF"
-                android:textSize="7dp"
+                android:layout_width="29dp"
+                android:layout_height="15dp"
                 android:layout_gravity="bottom|right"
-                android:text="00:00" />
+                android:layout_marginBottom="7dp"
+                android:layout_marginRight="9dp"
+                android:background="#000000"
+                android:gravity="center"
+                android:text="00:00"
+                android:textColor="#FFFFFF"
+                android:textSize="7dp" />
         </FrameLayout>
 
         <LinearLayout
-            android:layout_width="0dp"
-            android:layout_weight="1"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="13.09dp"
-            android:layout_marginRight="24.42dp"
+            android:layout_marginTop="3dp"
+            android:layout_weight="1"
             android:orientation="vertical">
 
             <TextView
@@ -53,17 +54,17 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="5.4dp"
-                android:textSize="13dp"
+                android:text="BTS - Anpanman fancam focus on Jungkuk king"
                 android:textColor="#000000"
-                android:text="BTS - Anpanman fancam focus on Jungkuk king" />
+                android:textSize="13dp" />
 
             <TextView
                 android:id="@+id/hash"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="12dp"
+                android:text="#BTS #Anpanman #Jungkuk"
                 android:textColor="#B1B1B1"
-                android:text="#BTS #Anpanman #Jungkuk" />
+                android:textSize="12dp" />
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
