--- a/app/src/main/res/layout/activity_image_contents.xml
+++ b/app/src/main/res/layout/activity_image_contents.xml
@@ -15,12 +15,13 @@
         <!-- X 버튼 -->
 
         <ImageButton
+            android:id="@+id/imgContentsBackBtn"
             android:layout_width="17.79dp"
             android:layout_height="17.79dp"
             android:layout_marginLeft="18.18dp"
-            android:layout_marginTop="10.69dp"
-
+            android:layout_marginTop="34.18dp"
             android:background="@drawable/content_x_btn"/>
+
     </LinearLayout>
 
     <LinearLayout
@@ -70,8 +71,8 @@
 
     <LinearLayout
         android:id="@+id/imgView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_weight="1">
 
         <android.support.v4.view.ViewPager
