--- a/app/src/main/res/layout/row_request_simple.xml
+++ b/app/src/main/res/layout/row_request_simple.xml
@@ -12,12 +12,13 @@
 
 
     <TextView
-        android:id="@+id/textView13"
+        android:id="@+id/request_text_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="7dp"
         android:layout_marginTop="10dp"
         android:ellipsize="end"
+        android:lines="1"
         android:text="What’s the meaning of “Apple” at this time?"
         android:textColor="#333333"
         android:textSize="13dp" />
@@ -28,7 +29,7 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/textView15"
+            android:id="@+id/request_text_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -37,7 +38,7 @@
             android:textSize="11dp" />
 
         <TextView
-            android:id="@+id/textView14"
+            android:id="@+id/request_text_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="04/07/2018"
