--- a/app/src/main/res/layout/activity_request_content.xml
+++ b/app/src/main/res/layout/activity_request_content.xml
@@ -52,7 +52,7 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/textView18"
+            android:id="@+id/request_text_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
@@ -75,7 +75,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/textView22"
+                android:id="@+id/request_text_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -84,7 +84,7 @@
                 android:textSize="12dp" />
 
             <TextView
-                android:id="@+id/textView21"
+                android:id="@+id/request_text_date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:alpha="0.63"
@@ -94,7 +94,7 @@
         </LinearLayout>
 
         <TextView
-            android:id="@+id/textView19"
+            android:id="@+id/request_text_link"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
@@ -105,7 +105,7 @@
             android:textSize="14dp" />
 
         <TextView
-            android:id="@+id/textView20"
+            android:id="@+id/request_text_content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:minLines="10"
