--- a/app/src/main/res/layout/row_video_contents_video.xml
+++ b/app/src/main/res/layout/row_video_contents_video.xml
@@ -16,7 +16,7 @@
             android:layout_height="92.03dp">
 
             <ImageView
-                android:id="@+id/video"
+                android:id="@+id/videocontents_video_iv_videoimage"
                 android:layout_width="144.5dp"
                 android:layout_height="92.03dp" />
 
@@ -28,7 +28,7 @@
                 android:src="@drawable/play_inside_content_icon" />
 
             <TextView
-                android:id="@+id/video_time"
+                android:id="@+id/video_contents_video_tv_contents_time"
                 android:layout_width="29dp"
                 android:layout_height="15dp"
                 android:layout_gravity="bottom|right"
@@ -50,7 +50,7 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/title"
+                android:id="@+id/video_contents_video_tv_video_titls"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="5.4dp"
@@ -59,7 +59,7 @@
                 android:textSize="13dp" />
 
             <TextView
-                android:id="@+id/hash"
+                android:id="@+id/video_contents_video_tv_hash"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="#BTS #Anpanman #Jungkuk"
