--- a/app/src/main/res/layout/fragment_now_trend.xml
+++ b/app/src/main/res/layout/fragment_now_trend.xml
@@ -1,15 +1,28 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="169dp"
     tools:context="com.cow.bridge.home.activity.type.hot.NowTrendFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="BTS Earns First No. 1 Album on Billboard 200 Chart"
-        android:textSize="15dp" />
 
+    <ImageView
+        android:id="@+id/nowtrend_image_thumbnail"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/nuest4" />
+
+    <TextView
+        android:id="@+id/nowtrend_text_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|left"
+        android:layout_marginBottom="18dp"
+        android:layout_marginLeft="13dp"
+        android:layout_marginRight="120dp"
+        android:text="BTS Earns First No. 1 Album on Billboard 200 Chart  "
+        android:textColor="#FFFFFF"
+        android:textSize="16dp"
+        android:textStyle="bold" />
 </FrameLayout>
