--- a/app/src/main/res/layout/row_subscribe_simple.xml
+++ b/app/src/main/res/layout/row_subscribe_simple.xml
@@ -12,14 +12,14 @@
     android:paddingTop="15dp">
 
     <ImageView
-        android:id="@+id/imageView10"
+        android:id="@+id/subscribe_image_thumbnail"
         android:layout_width="54dp"
         android:layout_height="54dp"
         android:layout_marginBottom="5dp"
         app:srcCompat="@drawable/bottom_bar_home_active_icon" />
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/subscribe_text_hashname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
