--- a/app/src/main/res/layout/activity_request_write.xml
+++ b/app/src/main/res/layout/activity_request_write.xml
@@ -23,7 +23,7 @@
             android:background="#FFFFFF">
 
             <TextView
-                android:id="@+id/button2"
+                android:id="@+id/request_text_write"
                 android:layout_width="wrap_content"
                 android:layout_height="51dp"
                 android:layout_gravity="right|center_vertical"
@@ -74,7 +74,7 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/textView17"
+                    android:id="@+id/request_text_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -84,7 +84,7 @@
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/textView16"
+                    android:id="@+id/request_text_date"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:alpha="0.63"
@@ -94,7 +94,7 @@
             </LinearLayout>
 
             <EditText
-                android:id="@+id/editText"
+                android:id="@+id/request_edit_title"
                 android:layout_width="match_parent"
                 android:layout_height="45dp"
                 android:layout_marginBottom="10dp"
@@ -107,7 +107,7 @@
                 android:textSize="14dp" />
 
             <EditText
-                android:id="@+id/editText2"
+                android:id="@+id/request_edit_url"
                 android:layout_width="match_parent"
                 android:layout_height="45dp"
                 android:layout_marginBottom="10dp"
@@ -120,7 +120,7 @@
                 android:textSize="14dp" />
 
             <EditText
-                android:id="@+id/editText4"
+                android:id="@+id/request_edit_content"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="#F7F7F7"
