--- a/app/src/main/res/layout/activity_image_contents.xml
+++ b/app/src/main/res/layout/activity_image_contents.xml
@@ -11,7 +11,6 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_marginBottom="10dp">
-
         <!-- X 버튼 -->
 
         <ImageButton
@@ -77,9 +76,8 @@
 
         <android.support.v4.view.ViewPager
             android:id="@+id/viewPager"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content">
-
         </android.support.v4.view.ViewPager>
 
     </LinearLayout>
