--- a/app/src/main/res/layout/activity_image_contents.xml
+++ b/app/src/main/res/layout/activity_image_contents.xml
@@ -38,11 +38,27 @@
             <!-- 사진 개수 알려주는 텍스트-->
 
             <TextView
-                android:id="@+id/imgCount"
+                android:id="@+id/currentNum"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="18.15dp"
-                android:text="19/20"
+                android:textColor="#fff"
+                android:textSize="14dp"
+                android:text="19"/>
+
+            <TextView
+                android:id="@+id/slash"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="#fff"
+                android:textSize="14dp"
+                android:text="/"/>
+
+            <TextView
+                android:id="@+id/imgCount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="20"
                 android:textColor="#fff"
                 android:gravity="left"
                 android:textSize="14dp"/>
